--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 # Port
-server.port  = 8080
+server.port  = ${PORT:8080}
 #mysql
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tododb
