Ready for deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,39 @@
+# spring.application.name=todo
+
+# # MySQL Database configuration
+# spring.datasource.url=jdbc:mysql://localhost:3306/tododb
+# spring.datasource.username=todo_user
+# spring.datasource.password=password
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# # JPA settings
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+
+# # Server port
+# server.port=9090
+
+# # Logging for debugging
+# logging.level.org.springframework.web=DEBUG
+# logging.level.com.todoapp=DEBUG
+
 spring.application.name=todo
 
-# H2 Database config
-# spring.datasource.url=jdbc:h2:mem:todo_db
-# spring.datasource.driverClassName=org.h2.Driver
-# spring.datasource.username=sa
-# spring.datasource.password=
+# Supabase PostgreSQL configuration
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://db.uidfhjzfrajxtjlvnsrl.supabase.co:5432/postgres?user=postgres&password=todoapp@2025 }
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:todoapp@2025}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA settings
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# JPA settings for PostgreSQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
-# Enable H2 Console (UI for DB)
-# spring.h2.console.enabled=true
-# spring.h2.console.path=/h2-console
+# Server configuration
+server.port=${PORT:8080}
 
-
-# Port
-server.port  = 9090
-
-#mysql
-
-spring.datasource.url=jdbc:mysql://localhost:3306/tododb
-spring.datasource.username=todo_user
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
+# Logging
+logging.level.com.todoapp=INFO
