--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,18 @@
 			<scope>runtime</scope>
 		</dependency> -->
 
-		<dependency>
+		<!-- <dependency>
     <groupId>com.mysql</groupId>
     <artifactId>mysql-connector-j</artifactId>
-    <version>8.1.0</version> <!-- ya latest stable -->
+    <version>8.1.0</version>
     <scope>runtime</scope>
-	</dependency>
+	</dependency> -->
+
+		<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <scope>runtime</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
